Changelog
0.8.7

Balance 

- Rebalance fuel produced and coal needed by synth fuel reffineries

Database 

- increase starting oil available in Romania 
- set more accurate values for starting oil in Germany 
- set more accurate starting reffineries level in Germany 

Features 

- Added decisions to increase oil extraction in Austria

0.8.6

Compatibility for 1.10 and Battle for the Bosphorus

Balance

- rollback on some convoys defines to make convoy raiding more meaningfull
- German War Economy focus now needs 70% War Support to be taken, instead of only 50% previously
- Speer a bit buffed on max efficiency side
- Planned Economy slightly nerfed on research speed and production factor
- 5-year plan buff on civilian industry building increased
- Soviet Union can get access to War Economy as soon as a big European War begins
- GPW no longer decrease industry conversion. That led to an unexpected effect where conversion was nearly instant, making proper conversion decisions irrelevant.
- Adjusted strength damages, were too low previously compared to IRL
- Considerably toned down the retention malus for Planned Economy
- Simplification and bonus grouping per thematics for land doctrines
- MEFO bills effect slightly toned down
- Tactics are a bit more meaningfull 
- Some focus allowing industrial projects for France and Italy are no longer available at start but need some conditions.
- UK starts with 3 additional military factories and 3 less civilian factories
- Doubled the amount of military factories given by "Schadow Scheme"
- Increased by 50% factory efficiency growth
- Speer now allow Germany to "catch up" productivity but make tanks less reliable.
- Removed base efficiency and efficiency retention bonuses from dispered industry tech line.
- AC bataillons now needs 3 width for 60 equipment, like tanks.
- Super heavy tanks now needs 3 width for 20 equipments
- The Great Patriotic War national Spirit now decrease training time 50% more than before