@@ -20830,7 +20830,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 120
 			surface_detection = 9
-			sub_detection = 6
+			sub_detection = 4
 			#carrier_size = -5
 			
 		}
@@ -20853,7 +20853,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 150
 			surface_detection = 12
-			sub_detection = 8
+			sub_detection = 6
 			#carrier_size = -5
 			
 		}
@@ -20876,7 +20876,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 180
 			surface_detection = 14
-			sub_detection = 16
+			sub_detection = 12
 			#carrier_size = -5
 			
 		}
@@ -20898,7 +20898,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 240
 			surface_detection = 12
-			sub_detection = 8
+			sub_detection = 6
 			carrier_size = -5
 			
 		}
@@ -20921,7 +20921,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 300
 			surface_detection = 16
-			sub_detection = 10
+			sub_detection = 8
 			carrier_size = -5
 			
 		}
@@ -20944,7 +20944,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 360
 			surface_detection = 18
-			sub_detection = 20
+			sub_detection = 16
 			carrier_size = -5
 			
 		}
@@ -20967,7 +20967,7 @@ equipment_modules = {
 			build_cost_ic = 160
 			sub_attack = 6
 			surface_detection = 6
-			sub_detection = 4
+			sub_detection = 3
 			carrier_size = -5
 			
 		}
@@ -20991,7 +20991,7 @@ equipment_modules = {
 			build_cost_ic = 200
 			sub_attack = 9
 			surface_detection = 6.75
-			sub_detection = 8
+			sub_detection = 6
 			carrier_size = -5
 			
 		}
@@ -21014,7 +21014,7 @@ equipment_modules = {
 			build_cost_ic = 320
 			sub_attack = 9
 			surface_detection = 8
-			sub_detection = 6
+			sub_detection = 4
 			carrier_size = -10
 			
 		}
@@ -21038,7 +21038,7 @@ equipment_modules = {
 			build_cost_ic = 400
 			sub_attack = 13.5
 			surface_detection = 9
-			sub_detection = 12
+			sub_detection = 10
 			carrier_size = -10
 			
 		}
@@ -49959,7 +49959,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 10
 			max_strength = 0.3
-			torpedo_attack = 3.53
+			torpedo_attack = 4.24
 			sub_visibility = 0.03
 			
 		}
@@ -49990,7 +49990,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 19
 			max_strength = 0.5
-			torpedo_attack = 5.05
+			torpedo_attack = 6.06
 			supply_consumption = 0.001
 			sub_visibility = 0.05
 			
@@ -50022,7 +50022,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 29
 			max_strength = 0.8
-			torpedo_attack = 6.58
+			torpedo_attack = 7.9
 			supply_consumption = 0.001
 			sub_visibility = 0.07
 			
@@ -50054,7 +50054,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 39
 			max_strength = 1.1
-			torpedo_attack = 8.11
+			torpedo_attack = 9.73
 			supply_consumption = 0.001
 			sub_visibility = 0.1
 			
@@ -50086,7 +50086,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 49
 			max_strength = 1.4
-			torpedo_attack = 9.64
+			torpedo_attack = 11.57
 			supply_consumption = 0.002
 			sub_visibility = 0.12
 			
@@ -50118,7 +50118,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 58
 			max_strength = 1.6
-			torpedo_attack = 11.16
+			torpedo_attack = 13.39
 			supply_consumption = 0.002
 			sub_visibility = 0.15
 			
@@ -50150,7 +50150,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 78
 			max_strength = 2.2
-			torpedo_attack = 14.22
+			torpedo_attack = 17.06
 			supply_consumption = 0.002
 			sub_visibility = 0.2
 			
@@ -50183,7 +50183,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 10
 			max_strength = 0.3
-			torpedo_attack = 4.04
+			torpedo_attack = 4.85
 			sub_visibility = 0.03
 			
 		}
@@ -50215,7 +50215,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 19
 			max_strength = 0.5
-			torpedo_attack = 6.07
+			torpedo_attack = 7.28
 			supply_consumption = 0.001
 			sub_visibility = 0.05
 			
@@ -50248,7 +50248,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 29
 			max_strength = 0.8
-			torpedo_attack = 8.11
+			torpedo_attack = 9.73
 			supply_consumption = 0.001
 			sub_visibility = 0.07
 			
@@ -50281,7 +50281,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 39
 			max_strength = 1.1
-			torpedo_attack = 10.15
+			torpedo_attack = 12.18
 			supply_consumption = 0.001
 			sub_visibility = 0.1
 			
@@ -50314,7 +50314,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 49
 			max_strength = 1.4
-			torpedo_attack = 12.18
+			torpedo_attack = 14.62
 			supply_consumption = 0.002
 			sub_visibility = 0.12
 			
@@ -50347,7 +50347,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 58
 			max_strength = 1.6
-			torpedo_attack = 14.22
+			torpedo_attack = 17.06
 			supply_consumption = 0.002
 			sub_visibility = 0.15
 			
@@ -50380,7 +50380,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 78
 			max_strength = 2.2
-			torpedo_attack = 18.29
+			torpedo_attack = 21.95
 			supply_consumption = 0.002
 			sub_visibility = 0.2
 			
@@ -50413,7 +50413,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 10
 			max_strength = 0.3
-			torpedo_attack = 4.55
+			torpedo_attack = 5.46
 			sub_visibility = 0.03
 			
 		}
@@ -50445,7 +50445,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 19
 			max_strength = 0.5
-			torpedo_attack = 7.09
+			torpedo_attack = 8.51
 			supply_consumption = 0.001
 			sub_visibility = 0.05
 			
@@ -50478,7 +50478,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 29
 			max_strength = 0.8
-			torpedo_attack = 9.64
+			torpedo_attack = 11.57
 			supply_consumption = 0.001
 			sub_visibility = 0.07
 			
@@ -50511,7 +50511,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 39
 			max_strength = 1.1
-			torpedo_attack = 12.18
+			torpedo_attack = 14.62
 			supply_consumption = 0.001
 			sub_visibility = 0.1
 			
@@ -50544,7 +50544,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 49
 			max_strength = 1.4
-			torpedo_attack = 14.73
+			torpedo_attack = 17.68
 			supply_consumption = 0.002
 			sub_visibility = 0.12
 			
@@ -50577,7 +50577,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 58
 			max_strength = 1.6
-			torpedo_attack = 17.27
+			torpedo_attack = 20.72
 			supply_consumption = 0.002
 			sub_visibility = 0.15
 			
@@ -50610,7 +50610,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 78
 			max_strength = 2.2
-			torpedo_attack = 22.36
+			torpedo_attack = 26.83
 			supply_consumption = 0.002
 			sub_visibility = 0.2
 			
@@ -50643,7 +50643,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 15
 			max_strength = 0.4
-			torpedo_attack = 4.89
+			torpedo_attack = 5.87
 			sub_visibility = 0.04
 			
 		}
@@ -50674,7 +50674,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 31
 			max_strength = 0.8
-			torpedo_attack = 7.77
+			torpedo_attack = 9.32
 			supply_consumption = 0.001
 			sub_visibility = 0.08
 			
@@ -50706,7 +50706,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 46
 			max_strength = 1.2
-			torpedo_attack = 10.66
+			torpedo_attack = 12.79
 			supply_consumption = 0.001
 			sub_visibility = 0.12
 			
@@ -50738,7 +50738,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 62
 			max_strength = 1.6
-			torpedo_attack = 13.55
+			torpedo_attack = 16.26
 			supply_consumption = 0.002
 			sub_visibility = 0.16
 			
@@ -50770,7 +50770,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 77
 			max_strength = 2
-			torpedo_attack = 16.44
+			torpedo_attack = 19.73
 			supply_consumption = 0.002
 			sub_visibility = 0.19
 			
@@ -50802,7 +50802,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 93
 			max_strength = 2.4
-			torpedo_attack = 19.32
+			torpedo_attack = 23.18
 			supply_consumption = 0.003
 			sub_visibility = 0.23
 			
@@ -50834,7 +50834,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 123
 			max_strength = 3.2
-			torpedo_attack = 25.1
+			torpedo_attack = 30.12
 			supply_consumption = 0.004
 			sub_visibility = 0.31
 			
@@ -50867,7 +50867,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 15
 			max_strength = 0.4
-			torpedo_attack = 5.85
+			torpedo_attack = 7.02
 			sub_visibility = 0.04
 			
 		}
@@ -50899,7 +50899,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 31
 			max_strength = 0.8
-			torpedo_attack = 9.7
+			torpedo_attack = 11.64
 			supply_consumption = 0.001
 			sub_visibility = 0.08
 			
@@ -50932,7 +50932,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 46
 			max_strength = 1.2
-			torpedo_attack = 13.55
+			torpedo_attack = 16.26
 			supply_consumption = 0.001
 			sub_visibility = 0.12
 			
@@ -50965,7 +50965,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 62
 			max_strength = 1.6
-			torpedo_attack = 17.4
+			torpedo_attack = 20.88
 			supply_consumption = 0.002
 			sub_visibility = 0.16
 			
@@ -50998,7 +50998,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 77
 			max_strength = 2
-			torpedo_attack = 21.25
+			torpedo_attack = 25.5
 			supply_consumption = 0.002
 			sub_visibility = 0.19
 			
@@ -51031,7 +51031,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 93
 			max_strength = 2.4
-			torpedo_attack = 25.1
+			torpedo_attack = 30.12
 			supply_consumption = 0.003
 			sub_visibility = 0.23
 			
@@ -51064,7 +51064,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 123
 			max_strength = 3.2
-			torpedo_attack = 32.79
+			torpedo_attack = 39.35
 			supply_consumption = 0.004
 			sub_visibility = 0.31
 			
@@ -51097,7 +51097,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 15
 			max_strength = 0.4
-			torpedo_attack = 6.81
+			torpedo_attack = 8.17
 			sub_visibility = 0.04
 			
 		}
@@ -51129,7 +51129,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 31
 			max_strength = 0.8
-			torpedo_attack = 11.62
+			torpedo_attack = 13.94
 			supply_consumption = 0.001
 			sub_visibility = 0.08
 			
@@ -51162,7 +51162,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 46
 			max_strength = 1.2
-			torpedo_attack = 16.44
+			torpedo_attack = 19.73
 			supply_consumption = 0.001
 			sub_visibility = 0.12
 			
@@ -51195,7 +51195,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 62
 			max_strength = 1.6
-			torpedo_attack = 21.25
+			torpedo_attack = 25.5
 			supply_consumption = 0.002
 			sub_visibility = 0.16
 			
@@ -51228,7 +51228,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 77
 			max_strength = 2
-			torpedo_attack = 26.06
+			torpedo_attack = 31.27
 			supply_consumption = 0.002
 			sub_visibility = 0.19
 			
@@ -51261,7 +51261,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 93
 			max_strength = 2.4
-			torpedo_attack = 30.87
+			torpedo_attack = 37.04
 			supply_consumption = 0.003
 			sub_visibility = 0.23
 			
@@ -51294,7 +51294,7 @@ equipment_modules = {
 		add_stats = {
 			build_cost_ic = 123
 			max_strength = 3.2
-			torpedo_attack = 40.49
+			torpedo_attack = 48.59
 			supply_consumption = 0.004
 			sub_visibility = 0.31
 			
