@@ -4,6 +4,11 @@ Changelog
 Balance 
 
 - Rebalance fuel produced and coal needed by synth fuel reffineries
+- Reduced hit chances of depth charges
+- Reduced slightly sub reveal chances 
+- Reduced slightly global sub detection stats 
+- Reduced carrier air group sub detection stats
+- Increased torpedo attack by 20% accross the board
 
 Database 
 
